# prompt-optimizer

./: .gitignore  .gitlab-ci.yml  .justfile  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
_index/: index.html
docs/: _index.md  index.md
examples/: hyperbaton.py  simple_optimize.py  structured_optimize.py
mlruns/0/: meta.yaml
mlruns/0/1eac031361364ecf8cf6fc0667fa2e42/: meta.yaml
mlruns/0/29d842f4af7d4049845707a63c5e6c94/: meta.yaml
mlruns/0/326e2bd889474395a91bb534142dea39/: meta.yaml
mlruns/0/38d6fd2ccc5d495a840edc3a501ecf6e/: meta.yaml
mlruns/0/3e20b7d161c24a8ba0814c5408111e85/: meta.yaml
mlruns/0/4a05ec16f41f44b3b147452c2185bf99/: meta.yaml
mlruns/0/5427369f4e6b4261846009f14a5d8cb6/: meta.yaml
mlruns/0/6e5affa5a3994b66bb8d64e5a04ae0f8/: meta.yaml
mlruns/0/7b6a6c52b3c04a72a9f5e9d40cca1a3d/: meta.yaml
mlruns/0/b55fe57f3fbe4fe3bf7042710da641bf/: meta.yaml
mlruns/0/bd7fc3771d404b74a91a9936592a4c95/: meta.yaml
mlruns/0/c3746b7809a947c884729fbc4935cd31/: meta.yaml
mlruns/0/cf7b20e3f19b4322a12f68b73fb6c936/: meta.yaml
mlruns/0/ecc15bc24c11407c855fd6d28687d47f/: meta.yaml
mlruns/0/eeb725795419407ab526fa42e436d89c/: meta.yaml
mlruns/0/f3ec165554f0440e94a718f7c978dea6/: meta.yaml
search/: search_index.json
src/prompt_optimizer/: __init__.py  base.py  types.py
src/prompt_optimizer/optimizers/: __init__.py  ape.py  base.py  gradient.py  opro.py  promptagent.py  protegi.py  structured_gradient.py  types.py
src/prompt_optimizer/pipeline/: __init__.py  base.py
tests/: conftest.py  test_base.py
tests/optimizers/: test_promptagent.py
(+17 files in other folders)
